name:                wunderground
version:             0.0.1
synopsis:            Bindings to the Weather Underground API
license:             MIT
license-file:        LICENSE
author:              Michael Xavier, Soostone Inc
maintainer:          michael.xavier@soostone.com
copyright:           2015 Soostone Inc
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.org
  changelog.md

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:     WUnderground
                     , WUnderground.Client
                     , WUnderground.Types
  build-depends:       base >=4.6 && <4.9
                     , aeson >= 0.7 && <0.9
                     , http-client >= 0.3 && <0.5
                     , text >= 0.11 && <1.3
                     , lens >= 4.7 && < 4.10
                     , time >= 1.0 && < 1.6
                     , scientific
                     , uri-bytestring >= 0.1.2 && < 0.2
                     , bytestring
                     , mtl
                     , http-types
                     , data-default-class
                     --TODO: loosen
                     , exceptions >= 0.8.0.2 && < 0.9
  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      wunderground
    , base
    , tasty
    , tasty-hunit
    , http-client
    , bytestring
    , lens
    , time

  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall
